Adding description to labels on changelogs
Adjusted minus flags on tags to sort rendered spacing
Removed periods from the end of label descriptions
Updated 2.0.0 changelog to add changelog (changelogception)
Fixed button styling in flyout nav - moved to block design, left-aligned text
Added buttons for sitemap and changelog

--- a/changelog/2.0.0.md
+++ b/changelog/2.0.0.md
@@ -10,6 +10,9 @@ tags:
 layout: layout/version.liquid
 ---
 ## New features
+### Changelog
+- Added a built in changelog that shows recent feature additions, updates, and bug fixes (saves going offsite to Github).  
+Accessible from the fly-out navigation and by clicking the site version number in the footer.
 ### Hex reversing
 - Added correct functionality for reversing Hex nibbles
 - Added ability to chain reverse commands together
