--- a/changelog/2.0.0.md
+++ b/changelog/2.0.0.md
@@ -13,10 +13,13 @@ layout: layout/version.liquid
 ### Changelog
 - Added a built in changelog that shows recent feature additions, updates, and bug fixes (saves going offsite to Github).  
 Accessible from the fly-out navigation and by clicking the site version number in the footer.
+- Tags are also clickable, leading to a filtered list of changelog items that include the given tag/tabel
 ### Hex reversing
 - Added correct functionality for reversing Hex nibbles
 - Added ability to chain reverse commands together
 - Added delimiter support to all reverse functions
+### Breadcrumbs
+- Added breadcrumb navigation across the site, for additional ease of navigation
 
 ## Changes
 ### Platform
@@ -26,6 +29,7 @@ Accessible from the fly-out navigation and by clicking the site version number i
 - Updated/improved various JS Doc comments
 ### Frontend
 - Improved/unified various tool descriptions and examples
+- Added changelog and sitemap links to the flyout navigation
 ### A11y
 - Remove italicised fonts and replaced with prefixed dash
 - Improved labels/titles on Forerunner buttons
