Filtered list of tags and tag explanations
Linked up each tag in the changelog list, each link goes to a filtered list of changelog items that contain that tag. Only 1 level of filtering is currently available
Added a hidden page (for now) of tags that lists all the available tags.:
- Tags that are applied to changelog items are linked through to the filtered changelog list for that tag
- The number of times a tag had been used is visible in

Re-worked tags list to match Github
Updated tag colors to sync between the site and Github (manually) and to be a bit more accessible

--- a/changelog/2.0.0.md
+++ b/changelog/2.0.0.md
@@ -11,9 +11,10 @@ layout: layout/version.liquid
 ---
 ## New features
 ### Changelog
-- Added a built in changelog that shows recent feature additions, updates, and bug fixes (saves going offsite to Github).  
-Accessible from the fly-out navigation and by clicking the site version number in the footer.
-- Tags are also clickable, leading to a filtered list of changelog items that include the given tag/tabel
+- Added a built in changelog that shows recent feature additions, updates, and bug fixes (saves going offsite to Github)  
+Accessible from the fly-out navigation and by clicking the site version number in the footer
+- Tags are also clickable, leading to a filtered list of changelog items that include the given tag/label
+- Added a list of available tags, along with the number of times that tag has been used and a link to the filtered changelog list (if greater than 0)
 ### Hex reversing
 - Added correct functionality for reversing Hex nibbles
 - Added ability to chain reverse commands together
