Update change with additional info

--- a/changelog/2.0.0.md
+++ b/changelog/2.0.0.md
@@ -29,7 +29,7 @@ Accessible from the fly-out navigation and by clicking the site version number i
 - Split front-end JS functionality into its own file, separate from main functions
 - Assigned some functions [ONI] to the global window object, so they can still be accessed from the web console
 - Updated/improved various JS Doc comments
-- Added meta keywords to the site
+- Added meta keywords and open graph tags to the site
 ### Frontend
 - Improved/unified various tool descriptions and examples
 - Added changelog and sitemap links to the flyout navigation
