Fixed missing 'v' prefix on the title and page title of Changelog pages
Using `templateSyntax` is a weird but decent enough workaround to only target the changelog item itself

--- a/changelog/2.0.2.md
+++ b/changelog/2.0.2.md
@@ -5,13 +5,16 @@ page-id: "changelog"
 tags: 
  - release
  - patch
+ - improvements
+ - bug-fixes
 layout: layout/version.liquid
 ---
-## New features
-- 
-
 ## Changes
-- 
+- Re-introduced the 'release' tag to all relevant changelogs
+- Only show "View on Github" release link on a changelog, if that version was officially released
+- Updated release badge color and description
+- Added remainder of the changelog items from Github, right back to 1.0.1
 
 ## Bug fixes
-- 
+- Fixed missing 'v' prefix on the title of Changelog pages  
+  Using `templateSyntax` is a weird but decent enough workaround to only target the changelog item itself
