Fix broken flyout nav in sub-dirs
Correctly handle navigation urls by adding the | url filter. Main nav urls were broken due to `../`, when in a sub-directory, not pointing to the root of the site

--- a/changelog/2.0.2.md
+++ b/changelog/2.0.2.md
@@ -16,5 +16,6 @@ layout: layout/version.liquid
 - Added remainder of the changelog items from Github, right back to 1.0.1
 
 ## Bug fixes
+- Correctly handle navigation urls by adding the | url filter. Main nav urls were broken due to `../`, when in a sub-directory, not pointing to the root of the site
 - Fixed missing 'v' prefix on the title of Changelog pages  
   Using `templateSyntax` is a weird but decent enough workaround to only target the changelog item itself
