Increased the spacing between changelog content and the "View on Github" button

--- a/changelog/2.0.2.md
+++ b/changelog/2.0.2.md
@@ -1,6 +1,6 @@
 ---
 title: "2.0.2"
-date: "2025-04-03"
+date: "2025-04-04"
 page-id: "changelog"
 tags: 
  - release
@@ -14,6 +14,7 @@ layout: layout/version.liquid
 - Only show "View on Github" release link on a changelog, if that version was officially released
 - Updated release badge color and description
 - Added remainder of the changelog items from Github, right back to 1.0.1
+- Increased the spacing between changelog content and the "View on Github" button
 
 ## Bug fixes
 - Correctly handle navigation urls by adding the | url filter. Main nav urls were broken due to `../`, when in a sub-directory, not pointing to the root of the site
