--- a/changelog/2.0.3.md
+++ b/changelog/2.0.3.md
@@ -8,4 +8,5 @@ layout: layout/version.liquid
 ---
 ## Changes
 - Reversed the sorting of changelog tags list, so that the latest published version for that tag shows at the top
+- Re-ordered tags in the labels file in a more sensible order
 - Added a true/false "visible" flag to all tags that will prevent them from appearing in the tags list (though they'll still be accessible directly, and if they are added to a changelog). Some tags are really for Github only, but want to sync them here and keep them in case they're ever needed
