Added "Jump to first page" and "Jump to last page" pagination links

--- a/changelog/2.1.0.md
+++ b/changelog/2.1.0.md
@@ -4,13 +4,16 @@ date: "2025-04-04"
 page-id: "changelog"
 tags: 
  - minor
+ - new-features
+ - improvements
 layout: layout/version.liquid
 ---
 ## New features
-- 
+### Pagingation
+- Added "Jump to first page" and "Jump to last page" pagination links
 
 ## Changes
-- 
+- Moved pagination into its own separate component file, so it can be re-used elsewhere
 
 ## Bug fixes
 - 
