Adjust pagination for mobiles
Drop the next/previous text down to an ASCII arrow
Added aria labelling
Reduce the previous page number count down to 1, so there's more space and hopefully helps prevent pagination from breaking out of page boundaries

--- a/changelog/2.1.0.md
+++ b/changelog/2.1.0.md
@@ -14,6 +14,8 @@ layout: layout/version.liquid
 
 ## Changes
 - Moved pagination into its own separate component file, so it can be re-used elsewhere
+- Reduced the previous page number count down to 1, so there's more space and hopefully helps prevent pagination from breaking out of page boundaries
+- On mobile, hide the Next/Previous text in favor of simple ASCII arrows ⇦ `&#8678;` and ⇨ `&#8680;`
 
 ## Bug fixes
 - 
