Layout adjustments for footer and 404
Making the footer work a little better by moving it inside the main content element, that way we don't have to deal with overflows.
Updated wrapper classes for 404 and removed most for other pages as they're no longer necessary
Minor improvement to the 404 message text

Changing line endings on a bunch of changelog files because 11ty or git or VScode decided that was a cool thing they wanted to do...

--- a/changelog/2.1.0.md
+++ b/changelog/2.1.0.md
@@ -9,13 +9,25 @@ tags:
 layout: layout/version.liquid
 ---
 ## New features
+### Sidebar / Navigation
+Technically a change, but also a new feature so highlighting it here
+- Overhauled the primary navigation across the site, replacing the bootstrap offcanvas flyout menu with a left hand expanding sidebar
+- Sidebar can be expanded by clicking on the hamburger icon next to the sitename, or by cliking on a menu tab
+- Clicking a tab will auto-expand to reveal a list of all the child pages
+- Closing the menu will close all open tabs
+- Added new icons for each of the primary sections (these will be improved upon in future)
+- Re-arranged order of items in the menu
+
 ### Pagingation
 - Added "Jump to first page" and "Jump to last page" pagination links
 
 ## Changes
+- Moved the footer inside the main content area
+- Minor improvement to the 404 message text
 - Moved pagination into its own separate component file, so it can be re-used elsewhere
 - Reduced the previous page number count down to 1, so there's more space and hopefully helps prevent pagination from breaking out of page boundaries
 - On mobile, hide the Next/Previous text in favor of simple ASCII arrows ⇦ `&#8678;` and ⇨ `&#8680;`
+- Updated Bootstrap core js to 5.3.3
 
 ## Bug fixes
-- 
+- Fixed some sass compiler warnings
