--- a/changelog/2.1.0.md
+++ b/changelog/2.1.0.md
@@ -28,6 +28,7 @@ Technically a change, but also a new feature so highlighting it here
 - Reduced the previous page number count down to 1, so there's more space and hopefully helps prevent pagination from breaking out of page boundaries
 - On mobile, hide the Next/Previous text in favor of simple ASCII arrows ⇦ `&#8678;` and ⇨ `&#8680;`
 - Updated Bootstrap core js to 5.3.3
+- Removed scrolling from the root HTML element and focused it on the <main> content area
 
 ## Bug fixes
 - Fixed some sass compiler warnings
