Adjust new menu for smaller screens
Moved to a custom built offcanvas fly in for small screens
Mobile sizes get full width, smaller tablet sizes get the regular menu size but still in a fly in/over style

Reversed the tab design, so that the tabs pop in from the side of the browser, rather than the content (which looked good at first, but didn't work with my alternating color sections)

Minor adjustments to margin/padding around content blocks and the nav icons

--- a/changelog/2.1.0.md
+++ b/changelog/2.1.0.md
@@ -11,7 +11,7 @@ layout: layout/version.liquid
 ## New features
 ### Sidebar / Navigation
 Technically a change, but also a new feature so highlighting it here
-- Overhauled the primary navigation across the site, replacing the bootstrap offcanvas flyout menu with a left hand expanding sidebar
+- Overhauled the primary navigation across the site, replacing the bootstrap offcanvas flyout menu with a left hand expanding sidebar (though a customised offcanvas version of the menu exists for smaller screen devices)
 - Sidebar can be expanded by clicking on the hamburger icon next to the sitename, or by cliking on a menu tab
 - Clicking a tab will auto-expand to reveal a list of all the child pages
 - Closing the menu will close all open tabs
