--- a/changelog/2.1.0.md
+++ b/changelog/2.1.0.md
@@ -29,6 +29,7 @@ Technically a change, but also a new feature so highlighting it here
 - On mobile, hide the Next/Previous text in favor of simple ASCII arrows ⇦ `&#8678;` and ⇨ `&#8680;`
 - Updated Bootstrap core js to 5.3.3
 - Removed scrolling from the root HTML element and focused it on the <main> content area
+- Switched Sitemap to a masonary layout, to neaten it up a little
 
 ## Bug fixes
 - Fixed some sass compiler warnings
