--- a/changelog/2.1.0.md
+++ b/changelog/2.1.0.md
@@ -6,14 +6,18 @@ tags:
  - minor
  - new-features
  - improvements
+ - bug-fixes
 layout: layout/version.liquid
 ---
 ## New features
+### Individual tool pages
+Each tool, along with remaining available on each main/top-level page, is also now available on their own dedicated page. 
+
 ### Sidebar / Navigation
-Technically a change, but also a new feature so highlighting it here
 - Overhauled the primary navigation across the site, replacing the bootstrap offcanvas flyout menu with a left hand expanding sidebar (though a customised offcanvas version of the menu exists for smaller screen devices)
-- Sidebar can be expanded by clicking on the hamburger icon next to the sitename, or by cliking on a menu tab
-- Clicking a tab will auto-expand to reveal a list of all the child pages
+- Sidebar can be expanded by clicking on the hamburger icon next to the sitename
+- Clicking the dropdown toggle on a tab will auto-expand to reveal a list of all the child pages
+- Child pages now link through to that tool's dedicated page, instead of scrolling to its position (goodbye scroll issues)
 - Closing the menu will close all open tabs
 - Added new icons for each of the primary sections (these will be improved upon in future)
 - Re-arranged order of items in the menu
@@ -24,12 +28,31 @@ Technically a change, but also a new feature so highlighting it here
 ## Changes
 - Moved the footer inside the main content area
 - Minor improvement to the 404 message text
-- Moved pagination into its own separate component file, so it can be re-used elsewhere
 - Reduced the previous page number count down to 1, so there's more space and hopefully helps prevent pagination from breaking out of page boundaries
 - On mobile, hide the Next/Previous text in favor of simple ASCII arrows ⇦ `&#8678;` and ⇨ `&#8680;`
-- Updated Bootstrap core js to 5.3.3
 - Removed scrolling from the root HTML element and focused it on the <main> content area
 - Switched Sitemap to a masonary layout, to neaten it up a little
+- Add page links to sitemap headers
 
 ## Bug fixes
+- Fixed issue with tag filter where it had the potential to expose other site assets/pages
+- Fixed some issues with keyword encode/decode, where the custom generated alphabet wouldn't always be reliable and provide inaccurate results
 - Fixed some sass compiler warnings
+
+## Behind the scenes changes
+<details>
+<summary>This is a list of more technical and non-front facing changes made to the site  </summary>
+
+#### New features
+- Added dynamic(-ish) import for JS files on all Pages, this way when the pages are included in the main landing page, they'll all come with the necessary functionality
+
+#### Changes
+- Moved pagination into its own separate component file, so it can be re-used elsewhere
+- Updated Bootstrap core js to 5.3.3
+- Created individual mjs files for each tool event and functions
+- Reduced the number of scripts loaded on a each page, additionally only loading in the scripts and functions necessary for that tool
+- Updated all scripts to output functions to the window object, making them web console accessible/usable
+
+#### Bug fixes
+
+</details>
