Changes to image links in changelog files
Any linked images now have an outline that changes color on hover/active/focus

Linked up the v3 image
Also swapped out v3 changelog image for updated version

--- a/changelog/3.0.0.md
+++ b/changelog/3.0.0.md
@@ -23,7 +23,7 @@ Each tool, along with remaining available on each main/top-level page, is also n
 - Added new icons for each of the primary sections (these will be improved upon in future)
 - Re-arranged order of items in the menu
 
-![image]({{ '/assets/img/changelog/v3.png' | url }})
+[![image]({{ '/assets/img/changelog/v3.png' | url }})]({{ '/assets/img/changelog/v3.png' | url }})
 
 ### Pagingation
 - Added "Jump to first page" and "Jump to last page" pagination links
