--- a/changelog/3.0.0.md
+++ b/changelog/3.0.0.md
@@ -10,6 +10,8 @@ tags:
  - bug-fixes
 layout: layout/version.liquid
 ---
+Originally going to be just a minor 2.1.0 release, as a new menu design and some bug fixes to recently added features, v3 took on a life of its own. It made sense to do an additional overhaul of the internal structure to better support the new design, and to also make it a little more modular and easier to maintain going forward. 
+
 ## New features
 ### Individual tool pages
 Each tool, along with remaining available on each main/top-level page, is also now available on their own dedicated page. 
@@ -23,7 +25,7 @@ Each tool, along with remaining available on each main/top-level page, is also n
 - Added new icons for each of the primary sections (these will be improved upon in future)
 - Re-arranged order of items in the menu
 
-[![image]({{ '/assets/img/changelog/v3.png' | url }})]({{ '/assets/img/changelog/v3.png' | url }})
+[![Screenshot of the Convrtrs tool page, showcasing the new sidebar design]({{ '/assets/img/changelog/v3.png' | url }})]({{ '/assets/img/changelog/v3.png' | url }})
 
 ### Pagingation
 - Added "Jump to first page" and "Jump to last page" pagination links
@@ -46,16 +48,16 @@ Each tool, along with remaining available on each main/top-level page, is also n
 <details>
 <summary>This is a list of more technical and non-front facing changes made to the site  </summary>
 
-#### New features
+### New features
 - Added dynamic(-ish) import for JS files on all Pages, this way when the pages are included in the main landing page, they'll all come with the necessary functionality
 
-#### Changes
+### Changes
 - Moved pagination into its own separate component file, so it can be re-used elsewhere
 - Updated Bootstrap core js to 5.3.3
 - Created individual mjs files for each tool event and functions
 - Reduced the number of scripts loaded on a each page, additionally only loading in the scripts and functions necessary for that tool
 - Updated all scripts to output functions to the window object, making them web console accessible/usable
 
-#### Bug fixes
+### Bug fixes
 
 </details>
