--- a/changelog/3.0.0.md
+++ b/changelog/3.0.0.md
@@ -34,17 +34,21 @@ Each tool, along with remaining available on each main/top-level page, is also n
 ## Changes
 - Moved the footer inside the main content area
 - Minor improvement to the 404 message text
+- On element conversion, changed the default "Convert from" to Atomic number, matching the example in the description
 - Reduced the previous page number count down to 1, so there's more space and hopefully helps prevent pagination from breaking out of page boundaries
 - On mobile, hide the Next/Previous text in favor of simple ASCII arrows ⇦ `&#8678;` and ⇨ `&#8680;`
 - Removed scrolling from the root HTML element and focused it on the <main> content area
 - Switched Sitemap to a masonary layout, to neaten it up a little
 - Add page links to sitemap headers
+- Removed sitemap link from the footer, as it's now visually accessible from the sidebar
 - Various changes and improvements made to text, link and button colors for accessibility
+- Added an extra setting to Select All function to allow trimming values before copying, so we get rid of extra white space at the start and end
 
 ## Bug fixes
-- Fixed issue with tag filter where it had the potential to expose other site assets/pages
 - Fixed some issues with keyword encode/decode, where the custom generated alphabet wouldn't always be reliable and provide inaccurate results
-- Fixed some sass compiler warnings
+- Fixed the potential for screen clickering to occur in Dark mode when moving between pages
+- Fixed issue with various results areas, where long text strings could break out of the page
+- Added a font size class when toggling between Braille conversion modes, so that braille to text doesn't change to huge text
 
 ## Behind the scenes changes
 <details>
@@ -59,5 +63,10 @@ Each tool, along with remaining available on each main/top-level page, is also n
 - Created individual mjs files for each tool event and functions
 - Reduced the number of scripts loaded on a each page, additionally only loading in the scripts and functions necessary for that tool
 - Updated all scripts to output functions to the window object, making them web console accessible/usable
+- Cleaned up Braille conversion function with some tidier code changes
+- Set "braille" to be the default mode so it doesn't need to be explicitly passed
 
+### Bug fixes
+- Fixed issue with tag filter where it had the potential to expose other site assets/pages
+- Fixed some sass compiler warnings
 </details>
