Fixed alignments / spacing on Text tools options for mobile

--- a/changelog/3/3.0.0.md
+++ b/changelog/3/3.0.0.md
@@ -48,6 +48,7 @@ Each tool, along with remaining available on each main/top-level page, is also n
 - Fixed some issues with keyword encode/decode, where the custom generated alphabet wouldn't always be reliable and provide inaccurate results
 - Fixed the potential for screen clickering to occur in Dark mode when moving between pages
 - Fixed issue with various results areas, where long text strings could break out of the page
+- Fixed alignments / spacing on Text tools options for mobile
 - Added a font size class when toggling between Braille conversion modes, so that braille to text doesn't change to huge text
 
 ## Behind the scenes changes
