Fix code styling on changelogs
Outside changelogs there are classes set up, but MD can't do classes like that. Just manually building up the same styling. More work to change later, but it's only this one thing

--- a/changelog/3/3.1.0.md
+++ b/changelog/3/3.1.0.md
@@ -10,3 +10,6 @@ layout: layout/version.liquid
 ## New features
 ### Google Analytics
 - Added support for Google Analytics tracking
+
+## Bug fixes
+- Fixed an issue with `<code>` tags not rendering with correct styling on Changelogs
