--- a/changelog/3/3.1.0.md
+++ b/changelog/3/3.1.0.md
@@ -13,3 +13,4 @@ layout: layout/version.liquid
 
 ## Bug fixes
 - Fixed an issue with `<code>` tags not rendering with correct styling on Changelogs
+- Fixed a styling issue on Changelogs, where a short changelog would expose and overlapping background.
