Updated Changelog with correct tags

--- a/changelog/3/3.1.0.md
+++ b/changelog/3/3.1.0.md
@@ -4,7 +4,8 @@ date: "2025-08-06"
 page-id: "changelog"
 tags: 
  - minor
- - new features
+ - new-features
+ - bug-fixes
 layout: layout/version.liquid
 ---
 ## New features
