--- a/changelog/3/3.1.0.md
+++ b/changelog/3/3.1.0.md
@@ -13,6 +13,9 @@ layout: layout/version.liquid
 ### Google Analytics
 - Added support for Google Analytics tracking
 
+### Privacy policy
+- Added a new [Privacy policy](/privacy) page to explain data captured from analytics and localStorage, along with an output of any localStorage data saved for the site
+
 ## Bug fixes
 - Fixed an issue with `<code>` tags not rendering with correct styling on Changelogs
-- Fixed a styling issue on Changelogs, where a short changelog would expose and overlapping background.
+- Fixed a styling issue on Changelogs, where a short changelog would expose and overlapping background
