--- a/changelog/3/3.1.0.md
+++ b/changelog/3/3.1.0.md
@@ -26,6 +26,7 @@ layout: layout/version.liquid
 ## Bug fixes
 - Fixed an issue with `<code>` tags not rendering with correct styling on Changelogs
 - Fixed a styling issue on Changelogs, where a short changelog would expose and overlapping background
+- Fixed an issue where localStorage would not be cleared/reset if there were no text fields, divs, or tables, that contained conversion data. 
 
 ## Behind the scenes changes
 <details>
