--- a/changelog/3/3.1.0.md
+++ b/changelog/3/3.1.0.md
@@ -26,7 +26,7 @@ layout: layout/version.liquid
 ## Bug fixes
 - Fixed an issue with `<code>` tags not rendering with correct styling on Changelogs
 - Fixed a styling issue on Changelogs, where a short changelog would expose and overlapping background
-- Fixed an issue where localStorage would not be cleared/reset if there were no text fields, divs, or tables, that contained conversion data. 
+- Fixed an issue where localStorage would not be cleared/reset if there were no text fields, divs, or tables, that contained conversion data
 
 ## Behind the scenes changes
 <details>
@@ -34,6 +34,7 @@ layout: layout/version.liquid
 
 ### Themeing and localStorage
 - Made an adjustment to how themes are stored, moving to a JSON object instead of just a plain text string. This means that things like descriptions can be stored and displayed. An example is on the Privacy policy, where the theme will be listed with its friendly name and description.
+- Legacy local storage items will now be cleared on first visit and a "legacy" flag stored, this will be removed in a future update
 
 ### Copyright
 - Fixed the date :)
