Updated local storage for tools
Similar to the work done on themes, open/closed tool states are now stored in a serialized JSON object so they can also include more information like descriptions and friendly names

Updated get/save localStorage functions to accommodate
Updated privacy policy to output localStorage items in alphabetical order
Fixed an type check issue when returning items from localstorage (true vs. "true")
Added additional data refs to each tool heading

--- a/changelog/3/3.1.0.md
+++ b/changelog/3/3.1.0.md
@@ -33,7 +33,7 @@ layout: layout/version.liquid
 <summary>This is a list of more technical and non-front facing changes made to the site  </summary>
 
 ### Themeing and localStorage
-- Made an adjustment to how themes are stored, moving to a JSON object instead of just a plain text string. This means that things like descriptions can be stored and displayed. An example is on the Privacy policy, where the theme will be listed with its friendly name and description.
+- Made an adjustment to how items in localStorage are stored, moving to a serialized JSON object instead of just a plain text string. This means that things like descriptions can be stored and displayed. An example is on the Privacy policy, where the all stored items will be listed with their friendly name and description.
 - Legacy local storage items will now be cleared on first visit and a "legacy" flag stored, this will be removed in a future update
 
 ### Copyright
