Updating changelog with tooltip details

--- a/changelog/3/3.1.0.md
+++ b/changelog/3/3.1.0.md
@@ -36,6 +36,10 @@ layout: layout/version.liquid
 - Made an adjustment to how items in localStorage are stored, moving to a serialized JSON object instead of just a plain text string. This means that things like descriptions can be stored and displayed. An example is on the Privacy policy, where the all stored items will be listed with their friendly name and description.
 - Legacy local storage items will now be cleared on first visit and a "legacy" flag stored, this will be removed in a future update
 
+### Tool headers
+- Introduced tooltips to the tool headers, to make it more apparent that they can be clicked on. These will be updated as you expand/collapse them. 
+- Adjusted the padding.spacing around tool headers to make it easier to tapclick on them. Clickable area now fills that area, rather that just being an area the same size as the tool heading font.
+
 ### Copyright
 - Fixed the date :)
 </details>
