Fix heading size on Privacy policy that accidentally skipped H2s

--- a/changelog/3/3.1.1.md
+++ b/changelog/3/3.1.1.md
@@ -15,4 +15,4 @@ layout: layout/version.liquid
 - To improve accessibility when navigating around the site, the size of the side navigation has been increased to a minimum of 44px to meet guidelines.
 
 ## Bug fixes
-- 
+- Fixed heading structure on Privacy policy, which accidentally skipped H2s
