--- a/changelog/3/3.1.1.md
+++ b/changelog/3/3.1.1.md
@@ -16,6 +16,7 @@ layout: layout/version.liquid
 
 ## Bug fixes
 - Fixed heading structure on Privacy policy, which accidentally skipped H2s
+- Removed unnecessary aria labels and added roles
 
 ## Behind the scenes changes
 <details>
