--- a/changelog/3/3.1.1.md
+++ b/changelog/3/3.1.1.md
@@ -18,6 +18,7 @@ layout: layout/version.liquid
 - Fixed heading structure on Privacy policy, which accidentally skipped H2s
 - Removed unnecessary aria labels and added roles
 - Removed redundant title from "Back to top" button
+- Fixed missing code styling on the results of a file header check
 
 ## Behind the scenes changes
 <details>
