--- a/changelog/3/3.1.1.md
+++ b/changelog/3/3.1.1.md
@@ -5,14 +5,15 @@ page-id: "changelog"
 tags: 
  - patch
  - a11y
+ - bug-fixes
 layout: layout/version.liquid
 ---
-## New features
-- 
-
 ## Changes
 ### Navigation
 - To improve accessibility when navigating around the site, the size of the side navigation has been increased to a minimum of 44px to meet guidelines.
+
+### Hex frequencies
+- Only frequencies with grouping values will be shown. If a frequency has no groupings, an empty heading will no longer be displayed
 
 ## Bug fixes
 - Fixed heading structure on Privacy policy, which accidentally skipped H2s
@@ -27,4 +28,5 @@ layout: layout/version.liquid
 ### General bug fixes
 - Fixed duplicate ID being set on mobile theme switcher
 - Fixed erroneous double quote in changelog link
+- Fixed multiple instances of opening paragraph tags being missing
 </details>
