Fix grammar in changelog

--- a/changelog/3/3.1.1.md
+++ b/changelog/3/3.1.1.md
@@ -16,14 +16,14 @@ layout: layout/version.liquid
 - Only frequencies with grouping values will be shown. If a frequency has no groupings, an empty heading will no longer be displayed
 
 ## Bug fixes
-- Fixed heading structure on Privacy policy, which accidentally skipped H2s
+- Fixed heading structure on Privacy policy, which accidentally skipped H2 tags
 - Removed unnecessary aria labels and added roles
 - Removed redundant title from "Back to top" button
 - Fixed missing code styling on the results of a file header check
 
 ## Behind the scenes changes
 <details>
-<summary>This is a list of more technical and non-front facing changes made to the site  </summary>
+<summary>This is a list of more technical and non-front-facing changes made to the site  </summary>
 
 ### General bug fixes
 - Fixed duplicate ID being set on mobile theme switcher
