Fixing changelog details
Fix missing release tag from 3.1.0 changelog
Added release tag to current version
Fixed incorrect version number in 1.17.7

--- a/changelog/3/3.1.1.md
+++ b/changelog/3/3.1.1.md
@@ -3,6 +3,7 @@ title: "3.1.1"
 date: "2025-09-01"
 page-id: "changelog"
 tags: 
+ - release
  - patch
  - a11y
  - bug-fixes
@@ -29,4 +30,6 @@ layout: layout/version.liquid
 - Fixed duplicate ID being set on mobile theme switcher
 - Fixed erroneous double quote in changelog link
 - Fixed multiple instances of opening paragraph tags being missing
+- Fixed incorrect version number in 1.17.7 changelog
+- Added missing release tag to 3.1.0 changelog
 </details>
