--- a/changelog/3/3.2.0.md
+++ b/changelog/3/3.2.0.md
@@ -7,7 +7,6 @@ tags:
  - minor
  - new-features
  - improvements
- - bug-fixes
  - privacy
  - a11y
 layout: layout/version.liquid
@@ -24,6 +23,7 @@ layout: layout/version.liquid
 <details>
 <summary>This is a list of more technical and non-front-facing changes made to the site  </summary>
 
-### General bug fixes
-- Fixed 
+### Changes/improvements
+- Updated Bootstrap icons to latest version [1.13.1]
+
 </details>
