--- a/changelog/3/3.2.0.md
+++ b/changelog/3/3.2.0.md
@@ -18,10 +18,10 @@ layout: layout/version.liquid
 
 ## Changes
 - Added additional contact methods (Discord/Github Issues) per WCAG guidelines
+- Added table captions to the changelog and hash tables
 
 ## Bug fixes
 - Ensured back to top text can be read by screen readers
-- Fixed H1 not being the first tag on the page
 
 ## Behind the scenes changes
 <details>
@@ -29,5 +29,6 @@ layout: layout/version.liquid
 
 ### Changes/improvements
 - Updated Bootstrap icons to latest version [1.13.1]
+- Fixed H1 not being the first tag on the page
 
 </details>
