Added table caption for file headers

--- a/changelog/3/3.2.0.md
+++ b/changelog/3/3.2.0.md
@@ -18,7 +18,7 @@ layout: layout/version.liquid
 
 ## Changes
 - Added additional contact methods (Discord/Github Issues) per WCAG guidelines
-- Added table captions to the changelog and hash tables
+- Added table captions to the changelog, file headers and hash tables
 
 ## Bug fixes
 - Ensured back to top text can be read by screen readers
