--- a/changelog/3/3.2.0.md
+++ b/changelog/3/3.2.0.md
@@ -29,6 +29,7 @@ layout: layout/version.liquid
 
 ### Changes/improvements
 - Updated Bootstrap icons to latest version [1.13.1]
+- Updated 11ty to latest version [3.1.2](https://github.com/11ty/eleventy/releases/tag/v3.1.2)
 - Fixed H1 not being the first tag on the page
 
 </details>
