--- a/changelog/3/3.2.0.md
+++ b/changelog/3/3.2.0.md
@@ -28,8 +28,8 @@ layout: layout/version.liquid
 <summary>This is a list of more technical and non-front-facing changes made to the site  </summary>
 
 ### Changes/improvements
-- Updated Bootstrap icons to latest version [1.13.1]
 - Updated 11ty to latest version [3.1.2](https://github.com/11ty/eleventy/releases/tag/v3.1.2)
+- Updated Bootstrap icons to latest version [1.13.1](https://github.com/twbs/icons/releases/tag/v1.13.1)
 - Fixed H1 not being the first tag on the page
 
 </details>
