--- a/changelog/3/3.2.0.md
+++ b/changelog/3/3.2.0.md
@@ -14,7 +14,7 @@ layout: layout/version.liquid
 
 ## New features
 ### Accessibility statement
-- Added an accessibility statement to help describe our progress towards WCAG guidelines.
+- Added an [accessibility statement](/accessibility/) to help describe our progress towards WCAG guidelines.
 
 ## Changes
 - Added additional contact methods (Discord/Github Issues) per WCAG guidelines
