--- a/changelog/3/3.2.0.md
+++ b/changelog/3/3.2.0.md
@@ -22,6 +22,7 @@ layout: layout/version.liquid
 
 ## Bug fixes
 - Ensured back to top text can be read by screen readers
+- Fixed missing styling on next/previous pagination links on mobile
 
 ## Behind the scenes changes
 <details>
