--- a/changelog/3/3.2.0.md
+++ b/changelog/3/3.2.0.md
@@ -31,6 +31,7 @@ layout: layout/version.liquid
 
 ### Changes/improvements
 - Updated 11ty to latest version [3.1.2](https://github.com/11ty/eleventy/releases/tag/v3.1.2)
+- Updated Bootstrap SCSS to latest version [5.3.4](https://github.com/twbs/bootstrap/releases/tag/v5.3.4)
 - Updated Bootstrap icons to latest version [1.13.1](https://github.com/twbs/icons/releases/tag/v1.13.1)
 - Fixed H1 not being the first tag on the page
 - Fixed link color on changelog items
