Updated changelog wording and added missing bug-fix tag

--- a/changelog/3/3.2.0.md
+++ b/changelog/3/3.2.0.md
@@ -7,6 +7,7 @@ tags:
  - minor
  - new-features
  - improvements
+ - bug-fixes
  - privacy
  - a11y
 layout: layout/version.liquid
@@ -22,7 +23,7 @@ layout: layout/version.liquid
 - Moved the "back to top" button inline with the site version in the footer
 
 ## Bug fixes
-- Ensured back to top text can be read by screen readers
+- Ensured that the "back-to-top" button text can be read by screen readers
 - Fixed missing styling on next/previous pagination links on mobile
 
 ## Behind the scenes changes
@@ -31,9 +32,9 @@ layout: layout/version.liquid
 
 ### Changes/improvements
 - Updated 11ty to latest version [3.1.2](https://github.com/11ty/eleventy/releases/tag/v3.1.2)
-- Updated Bootstrap SCSS to latest version [5.3.4](https://github.com/twbs/bootstrap/releases/tag/v5.3.4)
-- Updated Bootstrap icons to latest version [1.13.1](https://github.com/twbs/icons/releases/tag/v1.13.1)
-- Fixed H1 not being the first tag on the page
-- Fixed link color on changelog items
+- Updated Bootstrap SCSS to the latest version [5.3.4](https://github.com/twbs/bootstrap/releases/tag/v5.3.4)
+- Updated Bootstrap icons to the latest version [1.13.1](https://github.com/twbs/icons/releases/tag/v1.13.1)
+- Fixed an issue where the H1 tag was not the first tag on a page
+- Fixed the link color on changelog items
 
 </details>
