--- a/changelog/3/3.2.1.md
+++ b/changelog/3/3.2.1.md
@@ -13,6 +13,9 @@ layout: layout/version.liquid
 ### Sitemap (XML)
 - Added an XML sitemap to improve visibility, crawlability, and to improve working towards better accessibility
 
+## Changes
+- Removed the Sitemap from the Sitemap page (took me long enough 😛)
+
 ## Behind the scenes changes
 <details>
 <summary>This is a list of more technical and non-front-facing changes made to the site  </summary>
