--- a/changelog/3/3.2.1.md
+++ b/changelog/3/3.2.1.md
@@ -11,7 +11,7 @@ layout: layout/version.liquid
 ---
 ## New features
 ### Sitemap (XML)
-- Added an XML sitemap to improve visibility, crawlability, and to improve working towards better accessibility
+- Added an XML sitemap to improve search visibility, support efficient crawling, and contribute to ongoing accessibility efforts
 
 ## Changes
 - Removed the Sitemap from the Sitemap page (took me long enough 😛)
