--- a/changelog/3/3.2.1.md
+++ b/changelog/3/3.2.1.md
@@ -21,6 +21,6 @@ layout: layout/version.liquid
 <summary>This is a list of more technical and non-front-facing changes made to the site  </summary>
 
 ### Changes/improvements
-- Excluded a number of items from collections that don't need to be there, like 404 page and Sitemap. This is also beneficial to the XML sitemap
+- Excluded several items from collections that don't need to be there, like the 404 page and the Sitemap. This is also beneficial to the XML sitemap
 
 </details>
