--- a/changelog/3/3.2.1.md
+++ b/changelog/3/3.2.1.md
@@ -12,6 +12,7 @@ layout: layout/version.liquid
 ## New features
 ### Sitemap (XML)
 - Added an XML sitemap to improve search visibility, support efficient crawling, and contribute to ongoing accessibility efforts
+- Added robots.txt 
 
 ## Changes
 - Removed the Sitemap from the Sitemap page (took me long enough 😛)
