To fix potential accessibility issues with roles="switch" on inputs, ensure they have accessible label properties

--- a/changelog/3/3.2.2.md
+++ b/changelog/3/3.2.2.md
@@ -4,13 +4,8 @@ date: "2025-09-10"
 page-id: "changelog"
 tags: 
  - patch
+ - a11y
 layout: layout/version.liquid
 ---
-## New features
-- 
-
-## Changes
-- 
-
 ## Bug fixes
-- 
+- To fix potential accessibility issues with roles="switch" on inputs, ensure they have accessible label properties
