--- a/changelog/3/3.2.2.md
+++ b/changelog/3/3.2.2.md
@@ -8,4 +8,5 @@ tags:
 layout: layout/version.liquid
 ---
 ## Bug fixes
+- Added missing table caption to the the table for individual tags
 - To fix potential accessibility issues with roles="switch" on inputs, ensure they have accessible label properties
