--- a/changelog/3/3.2.2.md
+++ b/changelog/3/3.2.2.md
@@ -9,4 +9,4 @@ layout: layout/version.liquid
 ---
 ## Bug fixes
 - Added missing table caption to the table for individual tags
-- To fix potential accessibility issues with roles="switch" on inputs, ensure they have accessible label properties
+- To fix potential accessibility issues with roles="switch" on inputs, ensured they have accessible label properties
