--- a/changelog/3/3.3/3.3.0.md
+++ b/changelog/3/3.3/3.3.0.md
@@ -7,11 +7,15 @@ tags:
  - new-features
  - minor
  - improvements
+ - bug fixes
 layout: layout/version.liquid
 ---
 ## New features
 ### Site search
 - Implemented [PageFind](https://pagefind.app/) for site searching. Search results are automatically highlighted and a number of filters are available to quickly narrow down search results.
+
+## Bug fixes
+- Fixed an issue where page backgrounds in dark mode may show a block of white in som instances, if the content doesn't stretch all the way down
 
 ## Behind the scenes changes
 <details>
