--- a/changelog/3/3.3/3.3.0.md
+++ b/changelog/3/3.3/3.3.0.md
@@ -19,6 +19,7 @@ layout: layout/version.liquid
 ## Bug fixes
 - Fixed an issue where I accidentally forgot to make the Discord and Github links the mobile header view... links...🫣
 - Fixed an issue where page backgrounds in dark mode may show a block of white in some instances, if the content doesn't stretch all the way down
+- Fixed image scaling in changelogs
 
 ## Behind the scenes changes
 <details>
