Swapped out left/right arrow for its HTML named entity

--- a/changelog/3/3.3/3.3.0.md
+++ b/changelog/3/3.3/3.3.0.md
@@ -30,4 +30,5 @@ layout: layout/version.liquid
 - Added pagination details to changelog pages in site title and page title, this helps differentiate pages in search results.
 - Added "Changelog | " prefix to changelog items - this shows in search results, but is hidden on each changelog page
 - Updated page title separator to a pipe for consistency
+- Swapped out left/right arrow for its HTML named entity
 </details>
