--- a/changelog/3/3.3/3.3.0.md
+++ b/changelog/3/3.3/3.3.0.md
@@ -12,7 +12,7 @@ layout: layout/version.liquid
 ---
 ## New features
 ### Site search
-- Implemented [PageFind](https://pagefind.app/) for site searching. Search results are automatically highlighted and a number of filters are available to quickly narrow down search results.  
+- Implemented [PageFind](https://pagefind.app/) for site searching. Search results are automatically highlighted and a number of filters are available to quickly narrow down search results. A new link/icon for search is available in the header. 
 
 [![Screenshot of the Convrtrs search page, showcasing search results, keyword highlighting and filters]({{ '/assets/img/changelog/search.png' | url }})]({{ '/assets/img/changelog/search.png' | url }})
 
