--- a/changelog/3/3.3/3.3.0.md
+++ b/changelog/3/3.3/3.3.0.md
@@ -25,13 +25,13 @@ eleventyComputed:
 
 ## Behind the scenes changes
 <details>
-<summary>This is a list of more technical and non-front-facing changes made to the site  </summary>
+<summary>This is a list of more technical and non-front-facing changes made to the site</summary>
 
 ### Changes
 - Updated the structure of changelog files to add an additional sub-folder based on minor version. Keeping it a little tidier and easier to manage/search through
 - Added pagination details to changelog pages in site title and page title, this helps differentiate pages in search results
 - Added "Changelog | " prefix to changelog items - this shows in search results, but is hidden on each changelog page
-- Made some adjustments to the sitemap to allow setting the change frequence of pages like seach, privacy, accessibility and changelog items to "never" as they are unlikely to change very often (if at all)
+- Made some adjustments to the sitemap to allow setting the change frequence of pages like search, privacy, accessibility and changelog items to "never" as they are unlikely to change very often (if at all)
 - Updated page title separator to a pipe for consistency
 - Swapped out left/right arrow for its HTML named entity
 </details>
