Adding license file
Also fi wording on Changelog for previous version to match release notes

--- a/changelog/3/3.3/3.3.1.md
+++ b/changelog/3/3.3/3.3.1.md
@@ -13,7 +13,7 @@ eleventyComputed:
 ---
 ## Changes
 ### Sidebar / Navigation
-- Added tooltips to the sidebar navigation when the sidebar is closed, making it easier to see what section is what without opening the menu. 
+- Added tooltips to the sidebar navigation when the sidebar is closed, making it easier to see what a section is without opening the menu. 
 - Tooltips are disabled when the menu is opened, then re-enabled on close
 - Sidebar tabs/buttons have slightly increased in size to allow a better tap target and for better support of triggering the tooltip
 
