--- a/changelog/3/3.4/3.4.0.md
+++ b/changelog/3/3.4/3.4.0.md
@@ -22,7 +22,7 @@ Inline with the recommended Github Community Standards, added the following sect
   - Added [CC BY-NC-SA 4.0](/community/license) license information
 
 ### Changes
-- Moved the [Privacy](/community/privacy) and [Accessibility]](/community/accessibility) pages under Community
+- Moved the [Privacy](/community/privacy) and [Accessibility](/community/accessibility) pages under Community
 - Removed Privacy and Accessibility pages from the sidebar
 - Ensure that breadcrumbs are always lowercase
 - If a page doesn't include a title, use the file slug
