--- a/changelog/3/3.4/3.4.2.md
+++ b/changelog/3/3.4/3.4.2.md
@@ -4,23 +4,22 @@ date: "2025-09-29"
 page-id: "changelog"
 tags: 
   - patch
+  - improvements
+  - bug-fixes
 layout: layout/version.liquid
 eleventyComputed:
   page-id: "changelog-item"
 ---
-## New features
-- 
-
 ## Changes
-- 
+### Changelogs
+A clean-up and re-organization of changelog items:
+- Re-ordered tags based on hierarchy
+- Standardized section headings
+- Standardized no periods on line ends
+- Re-wrote a few sentences to make more sense
+- Added links to internal and external pages, where relevant
+- Added alt text to images
 
 ## Bug fixes
-- 
-
-## Behind the scenes changes
-<details>
-<summary>This is a list of more technical and non-front-facing changes made to the site</summary>
-
-### New features / Changes / Bug fixes
-- 
-</details>
+- Fixed typos on changelog items
+- Fixed casing on certain terms in changelog items
