--- a/_templates/0.0.0.md
+++ b/_templates/0.0.0.md
@@ -10,16 +10,16 @@ eleventyComputed:
 ## New features
 - 
 
-## Changes
+## Improvements
 - 
 
 ## Bug fixes
 - 
 
-## Behind the scenes changes
+## Behind the scenes improvements
 <details>
-<summary>This is a list of more technical and non-front-facing changes made to the site</summary>
+<summary>This is a list of more technical and non-front-facing improvements made to the site</summary>
 
-### New features / Changes / Bug fixes
+### New features / Improvements / Bug fixes
 - 
 </details>
