Fixed Sitemap URL generation for changelog tags

--- a/changelog/3/3.4/3.4.2.md
+++ b/changelog/3/3.4/3.4.2.md
@@ -23,3 +23,4 @@ A clean-up and re-organization of changelog items:
 ## Bug fixes
 - Fixed typos on changelog items
 - Fixed casing on certain terms in changelog items
+- Fixed Sitemap URL generation for changelog tags
