--- a/changelog/3/3.5/3.5.0.md
+++ b/changelog/3/3.5/3.5.0.md
@@ -1,15 +1,27 @@
 ---
 title: "3.5.0"
-date: "2025-10-03"
+date: "2025-10-05"
 page-id: "changelog"
 tags: 
   - release
   - minor
+  - new-features
   - improvements
+  - bug-fixes
 layout: layout/version.liquid
 eleventyComputed:
   page-id: "changelog-item"
 ---
+## New features
+### Exif Reader
+ - Added a nw tool that reads and displays Exif data / metadata from various types of image files.
+
+[![Exif reader tool showing exif data from an image file]({{ '/assets/img/changelog/exif.png' | url }})]({{ '/assets/img/changelog/exif.png' | url }})
+
 ## Improvements
 ### Changelogs
  - Added next/previous and earliest/latest pagination links to Changelog items, making it easier to scroll through the history or the site.
+
+## Bug fixes
+### Platform
+- Fixed an issue with code copying across all tools, where the results are would be converted to plain text and strip out any formatting.
