--- a/changelog/3/3.5/3.5.0.md
+++ b/changelog/3/3.5/3.5.0.md
@@ -13,8 +13,8 @@ eleventyComputed:
   page-id: "changelog-item"
 ---
 ## New features
-### Exif Reader
- - Added a nw tool that reads and displays Exif data / metadata from various types of image files.
+### [Exif Reader](/files/exif)
+ - Added a new tool that reads and displays Exif data / metadata from various types of image files.
 
 [![Exif reader tool showing exif data from an image file]({{ '/assets/img/changelog/exif.png' | url }})]({{ '/assets/img/changelog/exif.png' | url }})
 
