Rewriting changelog entry

--- a/changelog/3/3.5/3.5.0.md
+++ b/changelog/3/3.5/3.5.0.md
@@ -24,4 +24,4 @@ eleventyComputed:
 
 ## Bug fixes
 ### Platform
-- Fixed an issue with code copying across all tools, where the results are would be converted to plain text and strip out any formatting.
+- Fixed an issue with code copying across all tools&mdash;where the results are displayed, the contents would be converted to plain text and stripped of any HTML formatting.
