--- a/changelog/3/3.5/3.5.1.md
+++ b/changelog/3/3.5/3.5.1.md
@@ -1,6 +1,6 @@
 ---
 title: "3.5.1"
-date: "2025-10-06"
+date: "2025-10-09"
 page-id: "changelog"
 tags: 
   - patch
@@ -13,7 +13,9 @@ eleventyComputed:
 <summary>This is a list of more technical and non-front-facing improvements made to the site</summary>
 
 ### Improvements
-#### Platform
- - Added a build counter to track build numbers (I like stats)
- - Updated and simplified pre-build script to use newer 11ty events and arguments
+#### Config
+ - Replaced custom filters with their built-in versions
+
+#### Tools
+ - Simplified the generation of Covenant and Forerunner alphabets on their buttons, by dropping them into a loop
 </details>
