--- a/changelog/3/3.5/3.5.1.md
+++ b/changelog/3/3.5/3.5.1.md
@@ -13,8 +13,11 @@ eleventyComputed:
 <summary>This is a list of more technical and non-front-facing improvements made to the site</summary>
 
 ### Improvements
+#### Platform 
+ - Cleaned up and removed unused packages / updated to latest versions
 #### Config
  - Replaced custom filters with their built-in versions
+ - Removed markdown-it, in favor of render plugin
 
 #### Tools
  - Simplified the generation of Covenant and Forerunner alphabets on their buttons, by dropping them into a loop
