--- a/changelog/3/3.5/3.5.1.md
+++ b/changelog/3/3.5/3.5.1.md
@@ -4,6 +4,7 @@ date: "2025-10-09"
 page-id: "changelog"
 tags: 
   - patch
+  - improvements
 layout: layout/version.liquid
 eleventyComputed:
   page-id: "changelog-item"
