--- a/changelog/3/3.6/3.6.0.md
+++ b/changelog/3/3.6/3.6.0.md
@@ -1,26 +1,24 @@
 ---
 title: "3.6.0"
-date: "2025-10-16"
+date: "2025-12-09"
 page-id: "changelog"
 tags: 
+  - release
   - minor
 layout: layout/version.liquid
 eleventyComputed:
   page-id: "changelog-item"
 ---
 ## New features
-- 
+### [Pigpen cipher](/misc/pigpen)
+The Pigpen cipher is a simple substitution cipher where each letter is represented by a symbol formed from parts of a grid. These symbols use straight or angled lines, and may include a dot to distinguish characters.
 
 ## Improvements
-- 
+- Increase font size on results that include image generation
 
 ## Bug fixes
-- 
+- Fixed issues with multi-line image generation  
+  If a tool includes image generation, and the text wrapped to more than 1 line, it wouldn't wrap in the image. Instead it would get cut off as it tried to render outside the allowed area. Canvas is still beyond me, so after a lot of digging and searching, I ultimately used CoPilot to assist in  generating this fix.
+- Fixed missing "Previous" version title on changelogs
 
-## Behind the scenes improvements
-<details>
-<summary>This is a list of more technical and non-front-facing improvements made to the site</summary>
-
-### New features / Improvements / Bug fixes
-- 
 </details>
