--- a/changelog/3/3.6/3.6.0.md
+++ b/changelog/3/3.6/3.6.0.md
@@ -1,6 +1,6 @@
 ---
 title: "3.6.0"
-date: "2025-12-09"
+date: "2025-12-08"
 page-id: "changelog"
 tags: 
   - release
@@ -12,6 +12,8 @@ eleventyComputed:
 ## New features
 ### [Pigpen cipher](/misc/pigpen)
 The Pigpen cipher is a simple substitution cipher where each letter is represented by a symbol formed from parts of a grid. These symbols use straight or angled lines, and may include a dot to distinguish characters.
+
+[![Example pigpen cipher text]({{ '/assets/img/changelog/pigpen.png' | url }})]({{ '/assets/img/changelog/pigpen.png' | url }})
 
 ## Improvements
 - Increase font size on results that include image generation
