--- a/changelog/3/3.6/3.6.0.md
+++ b/changelog/3/3.6/3.6.0.md
@@ -5,6 +5,9 @@ page-id: "changelog"
 tags: 
   - release
   - minor
+  - new-features
+  - improvements
+  - bug-fixes
 layout: layout/version.liquid
 eleventyComputed:
   page-id: "changelog-item"
