Updated Bootstrap core JS to the latest version [5.3.8]
Updated changelog

--- a/changelog/3/3.6/3.6.2.md
+++ b/changelog/3/3.6/3.6.2.md
@@ -9,6 +9,13 @@ layout: layout/version.liquid
 eleventyComputed:
   page-id: "changelog-item"
 ---
-## Improvements
+## Behind the scenes improvements
+<details>
+<summary>This is a list of more technical and non-front-facing improvements made to the site</summary>
+
+### Improvements
 - Updated README with additional information: dynamically pulled version number, updated layout with sections
 - Updated main meta image
+- Added new keywords for recently released tools
+- Updated Bootstrap core JS to the latest version [5.3.8](https://github.com/twbs/bootstrap/releases/tag/v5.3.8)
+</details>
