Update 3.6.1 changelog formatting to match previous entries

--- a/changelog/3/3.6/3.6.1.md
+++ b/changelog/3/3.6/3.6.1.md
@@ -14,6 +14,6 @@ eleventyComputed:
 <summary>This is a list of more technical and non-front-facing improvements made to the site</summary>
 
 ### Improvements
-- Bump SASS to 1.95.0
-- Bump Bootstrap SCSS to 5.3.8
+- Updated SASS to the latest version [1.95.0](https://github.com/sass/dart-sass/releases/tag/1.95.0)
+- Updated Bootstrap SCSS to the latest version [5.3.8](hhttps://github.com/crissdev/bootstrap-scss/releases/tag/v5.3.8)
 </details>
