--- a/changelog/3/3.6/3.6.2.md
+++ b/changelog/3/3.6/3.6.2.md
@@ -14,7 +14,7 @@ eleventyComputed:
 <summary>This is a list of more technical and non-front-facing improvements made to the site</summary>
 
 ### Improvements
-- Updated README with additional information: dynamically pulled version number, updated layout with sections
+- Updated README with additional information: dynamically generated badges using [shields.io](https://shields.io/), updated layout with additional sections, and amended some of the initial wording (adding in a shout to [Paul Schou's Xlate](http://paulschou.com/tools/xlate/))
 - Updated main meta image
 - Added new keywords for recently released tools
 - Updated Bootstrap core JS to the latest version [5.3.8](https://github.com/twbs/bootstrap/releases/tag/v5.3.8)
