Fixed an issue where attempting to generate a Braille image when nod been converted, would not correctly generate a warning message

--- a/changelog/3/3.6/3.6.2.md
+++ b/changelog/3/3.6/3.6.2.md
@@ -5,10 +5,14 @@ page-id: "changelog"
 tags: 
   - patch
   - improvements
+  - bug-fixes
 layout: layout/version.liquid
 eleventyComputed:
   page-id: "changelog-item"
 ---
+## Bug fixes
+- Fixed an issue where attempting to generate a Braille image when nod been converted, would not correctly generate a warning message
+
 ## Behind the scenes improvements
 <details>
 <summary>This is a list of more technical and non-front-facing improvements made to the site</summary>
