Set a background color for all tool input fields to help them stand out a little more

--- a/changelog/3/3.6/3.6.2.md
+++ b/changelog/3/3.6/3.6.2.md
@@ -10,6 +10,9 @@ layout: layout/version.liquid
 eleventyComputed:
   page-id: "changelog-item"
 ---
+## Improvements
+- Set a background color for all tool input fields to help them stand out a little more
+
 ## Bug fixes
 - Fixed an issue where attempting to generate a Braille image when nod been converted, would not correctly generate a warning message
 
