Added better labelling to the Caesar cipher, to better ensure that screen readers know about the pattern restrictions

--- a/changelog/3/3.6/3.6.4.md
+++ b/changelog/3/3.6/3.6.4.md
@@ -13,3 +13,4 @@ eleventyComputed:
 ### A11y
 - Fixed color contrast of highlighted search terms when in dark mode
 - Fixed aria labelling warnings in the sidebar
+- Added better labelling to the Caesar cipher, to better ensure that screen readers know about the pattern restrictions
