--- a/changelog/3/3.6/3.6.4.md
+++ b/changelog/3/3.6/3.6.4.md
@@ -1,9 +1,10 @@
 ---
 title: "3.6.4"
-date: "2025-12-12"
+date: "2025-12-14"
 page-id: "changelog"
 tags: 
   - patch
+  - improvements
   - a11y
 layout: layout/version.liquid
 eleventyComputed:
